--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,10 +11,12 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
     
 jobs:
   generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 10
     
@@ -31,11 +33,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user_name>/<repository>/<target_branch>/<file> , or as github page
+      # the content will be available at https://raw.githubusercontent.com/<github_user_name>/<repository>/<target_branch>/<file>
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/gh-action-github-pages@v3.1.0
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: dist
